--- a/views/result.erb
+++ b/views/result.erb
@@ -29,6 +29,13 @@ Chapters:
 </ul>
 </div>
 <footer>
+<iframe width="230" 
+  height="165"
+  frameborder="0"
+  scrolling="no"       
+  src="http://iheartquotes.com/api/v1/random?format=html&max_lines=4&max_characters=320&width=225&height=165">
+<a href="http://iheartquotes.com/fortune/random">Random Quote</a>
+</iframe> 
 </footer>
 </body>
 </html>
